2001-11-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: force defaults data to be read/write
	only to the user.  Supplied by Ludovic Marcotte

Wed Nov  7 09:04:51 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	After this change you need the latest gnustep-make to compile.
	* Source/Makefile.postamble: Removed rules to manually compile
	NSInvocation.m, NSConnection.m and mframe.m.
	(mframe.m_FILE_FILTER_OUT_FLAGS): Set to filter out optimization
	flags when compiling mframe.m.
	(NSConnection.m_FILE_FILTER_OUT_FLAGS): Idem.
	(NSInvocation.m_FILE_FILTER_OUT_FLAGS): Idem.
	
2001-11-01  Adam Fedor  <fedor@gnu.org>

	* Source/NSData.m: Add an include to avoid some warnings.

Tue Oct 30 14:33:48 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Testing/benchmark.m (bench_object): Added test showing that a
	call to super in a category method - no matter if a class or an
	instance method - has the same big performance hit that a class
	method invocation has - at least with the current GNU runtime.

2001-10-28  Adam Fedor  <fedor@gnu.org>

	* Source/NSFileManager.m (_attributesAtPath:traverseLink:forCopy:): 
	Make NSLog message into fprintf to avoid recursion.

	* Source/NSUserDefaults.m (pathForUser): Create ~/GNUstep/Library
	if it doesn't exist.

2001-10-26  Adam Fedor  <fedor@gnu.org>

	* configure (z): Check for gzseek in zlib since older zlibs don't
	have it. Fix check for LLONG_MAX (check if includes exist), same
	with uintmax_t
	* Source/GSFormat.h: Include stdint.h or inttypes.h if we have it.
	Proper check for LONG_LONG_MAX or LLONG_MAX.

2001-10-25  Adam Fedor  <fedor@gnu.org>

	* aclocal.m4 (AC_SYS_PROCFS): Typo fix, use AC_ARG_ENABLE. Make
	sure cache var is set to no if disabled.
	(AC_SYS_PROCFS_EXE_LINK): Likewise.

	* configure.in: Check for LLONG_MAX. Check for -lcipher.
	(Patch from chrisv@web4inc.com with modifications).
	* Source/GSFormat.m: If we have LLONG_MAX, define LONG_LONG_MAX
	to match.
	* Source/NSScanner.m: Likewise.
